--- a/app/src/main/res/layout/activity_db.xml
+++ b/app/src/main/res/layout/activity_db.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DBActivity">
+    tools:context=".view1.DBActivity">
     <Button
         android:id="@+id/clear_db_button"
         android:layout_width="wrap_content"
