--- a/app/src/main/res/layout/activity_history_list.xml
+++ b/app/src/main/res/layout/activity_history_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HistoryListActivity">
+    tools:context=".view1.HistoryListActivity">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/historyList"
